--- a/Style/index.css
+++ b/Style/index.css
@@ -4,7 +4,95 @@
     font-size: 14px;
 }
 
+.link{
+    display: none;
+}
+
 body{
     width: 100vw;
     height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(to bottom right, #2619AA, rgb(143, 30, 160, 0.5));
+}
+
+.img-icon{
+    height: 55px;
+    width: 55px;
+    border-radius: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0px 10px 10px 10px;
+}
+
+.img-icon:hover{
+    background-color: #fff;
+    transition: 0.5s;
+}
+
+.img-icon img{
+    width: 40px;
+    border-radius: 50px;
+}
+
+.aside{
+    width: 80px;
+    height: 100vh;
+    background-color: black;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.enterprise{
+    padding-top: 15px;
+    height: 100px;
+    margin-bottom: 170px;
+}
+
+.enterprise h4{
+    display: none;
+}
+
+.enterprise div{
+    background-color: #fff;
+}
+
+
+/*activar con js*/
+.img-icon-hover{
+    background-color: #fff;
+    width: 200px;
+    border-radius: 0;
+    border-top-left-radius: 50px;
+    border-bottom-left-radius: 50px;
+    transition: linear, 0.5s;
+    justify-content: flex-start;
+    align-items: center;
+    padding-left: 5px;
+    margin: 0 0 10px 10px;
+}
+
+.aside-active {
+    width: 200px;
+    transition: 0.5s;
+}
+
+.link-active{
+    display: block;
+    padding: 3px;
+    padding-left: 5px;
+    color: black;
+    text-decoration: none;
+}
+
+.link-active:hover{
+    font-weight: bold;
+    text-decoration: underline;
+}
+
+.enterprise h4{
+    display: none;
 }
